--- a/www/templates/browse/details.html
+++ b/www/templates/browse/details.html
@@ -7,7 +7,7 @@
 
       <div class="item item-image" style="text-align:center; height:260px;">
         <a href="" class="item item-image">
-          <img class="full-image" ng-src="{{post.img}}">
+          <img class="full-image" ng-src="{{post.images[0]}}">
         </a>
       </div>
 
@@ -15,9 +15,9 @@
     <div class="item item-body" style="height:110px;box-shadow:0 1px 5px grey;">
     <p style="text-align:center; font-size:1.3em;">{{post.title}}</p>
     <div class="item-icon-left item-icon-right">
-      <i style="font-size: small; padding-bottom:80px; color:#8D8D8D;" class="icon ion-ios-star">100</i>
-      <i style="font-size: small; padding-bottom:80px; color:#8D8D8D;" class="icon ion-ios-time">4hr</i>
-  </div>
+        <i style="font-size: small; padding-bottom:80px; color:#8D8D8D;" class="icon ion-ios-star">{{post.saved}}</i>
+        <i style="font-size: small; padding-bottom:80px; color:#8D8D8D;" class="icon ion-ios-time"></i>
+    </div>
       <div class="row">
         <p class="col col-offset-10" style="position:relative;top:-25px;color:#0A3CB6">CONTACT</p>
         <p class="col col-offset-33" style="position:relative;top:-25px;color:#3ABA30" >SHARE</p>
@@ -27,15 +27,15 @@
    <div> <!-- div container for body-->
         <!-- Date and time of event -->
         <p class="ion-ios-clock" style="font-size:XX-large; margin:20px 0px 0px 17px; color:#71D472;">
-          <span style="font-size: .6em; position:relative;top:-5px; margin: 0px 0px 5px 20px; color:black;"> {{post.when}}</span></p>
+          <span style="font-size: .6em; position:relative;top:-5px; margin: 0px 0px 5px 20px; color:black;"> {{post.date}}</span></p>
 
         <!-- location of event -->
         <p class="ion-ios-location" style="font-size:XX-large; margin:20px 0px 0px 20px; color:#A1887F;">
-          <span style="font-size: .6em; position:relative;top:-5px; margin: 0px 0px 5px 20px; color:black;"> {{post.where}}</span></p>
+          <span style="font-size: .6em; position:relative;top:-5px; margin: 0px 0px 5px 20px; color:black;"> {{post.location}}</span></p>
       <div class="row">
         <div class="col col-10"></div>
         <div class="item item-image" style="margin:10px 15px 25px 25px;"> <!-- using filler image for now -->
-        <img class="full-image" src="img/map.png"></img> <!-- need to implement map api to display the location here -->
+        <img class="full-image" src="img/Map.png"></img> <!-- need to implement map api to display the location here -->
         </div>
      </div>
 
@@ -47,7 +47,7 @@
      <p class="ion-ios-person" style="font-size:XX-large; margin:20px 0px 0px 18px; color:#4E6CEF;">
         <span style="font-size: .4em; position:relative;top:-15px; margin: 0px 0px 5px 25px; color:black;"> Posted By {{post.postedAuthor}}</span>
         <br/>
-        <span style="font-size: .3em; position:relative;top: -27px; margin: 0px 0px 5px 54px; color:black;"> {{post.postedDate}}</span>
+        <span style="font-size: .3em; position:relative;top: -27px; margin: 0px 0px 5px 54px; color:black;"> {{post.date_created}}</span>
         </p>
       </div>
   </ion-content>
