--- a/www/templates/browse/featured.html
+++ b/www/templates/browse/featured.html
@@ -2,27 +2,28 @@
 
   <div class="col" ng-if="$index < posts.length">
     <div class="list card" style="box-shadow:0 1px 5px black; margin:0;">
-        <a class="item item-image" href="#/browse/details/{{post.id}}" style="height:150px;">
-            <img class="full-image" ng-src="{{post.img}}">
-        </a>
-        <div class="item item-divider text-center " Style="height:50px;">
-            <p style="font-size: small;">  {{post.title}} </p>
-            <div class="item-icon-left item-icon-right">
-                <i style="font-size: small; padding-top:30px;" class="icon ion-pin"></i>
-                <i style="font-size: x-small; padding-top:30px;" class="icon ion-ios-time">4hr</i>
-            </div>
-        </div>
+	  <a class="item item-image" href="#/browse/details/{{post.id}}" style="height:150px;">
+		    <img class="full-image" ng-src="{{post.images[0]}}">
+	  </a>
+    <div class="item item-divider text-center " Style="height:50px;">
+	   <p style="font-size: small;">  {{post.title}} </p>
+		<div class="item-icon-left item-icon-right">
+      <i style="font-size: small; padding-top:30px;" class="icon ion-ios-star"></i>
+      <i style="font-size: x-small; padding-top:30px;" class="icon ion-ios-time">4hr</i>
+  </div>
+    </div>
     </div>
   </div>
+
   <div class="col" ng-if="$index + 1 < posts.length">
     <div class="list card" style="box-shadow:0 1px 5px black; margin:0;">
 	  <a class="item item-image" href="#/browse/details/{{posts[$index + 1].id}}" style="height:150px;">
-		<img class="full-image" ng-src="{{posts[$index + 1].img}}">
+		<img class="full-image" ng-src="{{posts[$index + 1].images[0]}}">
 	  </a>
-	  <div class="item item-divider" Style="height:50px;">
+    <div class="item item-divider text-center" Style="height:50px;">
 	   <p style="font-size: small;">  {{posts[$index + 1].title}} </p>
      <div class="item-icon-left item-icon-right">
-     <i style="font-size: small; padding-top:30px;" class="icon ion-pin"></i>
+     <i style="font-size: small; padding-top:30px;" class="icon ion-ios-star"></i>
      <i style="font-size: x-small; padding-top:30px;" class="icon ion-ios-time">4hr</i>
    </div>
      </div>
