--- a/www/templates/profile/profile.html
+++ b/www/templates/profile/profile.html
@@ -13,6 +13,7 @@
         <div>
           <h4>My Posts</h4>
           <div class="row">
+            <!-- this is just dummy data need to connect it with the server -->
             <div class="list cards col col-50">
               <div class="list card" style="box-shadow:0 1px 5px black; border-radius: 4px; margin:0;">
               <a class="item item-image" href="" style="height:150px;">
@@ -21,12 +22,13 @@
               <div class="item item-divider text-center " Style="height:50px;">
                <p style="font-size: small;">  stuff </p>
               <div class="item-icon-left item-icon-right">
-              <i style="font-size: x-small; padding-top:30px;" class="icon ion-ios-heart assertive">100</i>
+              <i style="font-size: x-small; padding-top:30px;" class="icon ion-ios-star">100</i>
               <i style="font-size: x-small; padding-top:30px;" class="icon ion-ios-time">4hr</i>
             </div>
               </div>
             </div>
             </div>
+            <!-- this is just dummy data need to connect it with the server -->
             <div class="list cards col col-50">
               <div class="list card" style="box-shadow:0 1px 5px black; border-radius: 4px; margin:0;">
               <a class="item item-image" href="" style="height:150px;">
@@ -35,7 +37,7 @@
               <div class="item item-divider text-center " Style="height:50px;">
                <p style="font-size: small;">  More Stuff </p>
               <div class="item-icon-left item-icon-right">
-              <i style="font-size: x-small; padding-top:30px;" class="icon ion-ios-heart assertive">100</i>
+              <i style="font-size: x-small; padding-top:30px;" class="icon ion-ios-star">100</i>
               <i style="font-size: x-small; padding-top:30px;" class="icon ion-ios-time">4hr</i>
             </div>
               </div>
