--- a/www/templates/pages/mainlocations.html
+++ b/www/templates/pages/mainlocations.html
@@ -1,7 +1,7 @@
 <ion-view>
     <ion-header-bar align-title="center" class="bar-positive">
         <h1 class="title">Locations</h1>
-          <button class="button button-clear icon-left ion-android-map"
+          <button class="button button-clear icon ion-android-map"
                   ui-sref="map" i></button>
     </ion-header-bar>
     <ion-content>
