--- a/www/templates/pages/map.html
+++ b/www/templates/pages/map.html
@@ -1,13 +1,14 @@
-<ion-view title="Map">
-
-  <ion-header-bar class="bar-dark" >
-      <h1 class="title">Google Maps Example</h1>
+<ion-view>
+    <ion-header-bar align-title="center" class="bar-positive">
+          <button class="button button-clear icon-left ion-chevron-left"
+                  ui-sref="subloc({lid: 2})" i>Back</button>
+        <h1 class="title">Map</h1>
     </ion-header-bar>
-    <ion-content>
-      <div id="map" data-tap-disabled="true"></div>
-    </ion-content>
-    <ion-footer-bar class="bar-dark">
-      <a ng-click="centerOnMe()" class="button button-icon icon ion-navigate">Find Me</a>
-    </ion-footer-bar>
+<ion-content class="has-header padding">
+
+<!-- map directive-->
+<app-map style="height:400px;margin:12px;box-shadow:0 3px 25px black;"> 
+</app-map>
+</ion-content>
 
 </ion-view>
