modal on details(incomplete)/changed pin page to saved

--- a/www/templates/browse/featured.html
+++ b/www/templates/browse/featured.html
@@ -9,7 +9,7 @@
 	   <p style="font-size: small;">  {{post.title}} </p>
 		<div class="item-icon-left item-icon-right">
       <i style="font-size: small; padding-top:30px;" class="icon ion-ios-star"></i>
-      <i style="font-size: x-small; padding-top:30px;" class="icon ion-ios-time">4hr</i>
+      <i style="font-size: small; padding-top:30px;" class="icon ion-ios-clock">4hr</i>
   </div>
     </div>
     </div>
@@ -24,7 +24,7 @@
 	   <p style="font-size: small;">  {{posts[$index + 1].title}} </p>
      <div class="item-icon-left item-icon-right">
      <i style="font-size: small; padding-top:30px;" class="icon ion-ios-star"></i>
-     <i style="font-size: x-small; padding-top:30px;" class="icon ion-ios-time">4hr</i>
+     <i style="font-size: small; padding-top:30px;" class="icon ion-ios-clock">4hr</i>
    </div>
      </div>
 	  </div>
