--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,3 +7,14 @@
   margin: 30px auto 0;
   box-shadow: 0px 0px 4px rgba(0,0,0,0.7);
 }
+.center {
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+  position: absolute !important;
+  margin:0 auto;
+  width:100%;
+}
