--- a/www/templates/browse/details.html
+++ b/www/templates/browse/details.html
@@ -5,8 +5,8 @@
 </ion-nav-bar>
   <ion-content style="top:0;background-color: #FAFAFA;">
 
-      <div class="item item-image" style="text-align:center; height:260px;">
-        <a href="" class="item item-image">
+      <div ng-controller="detailsModal" class="item item-image" style="text-align:center; height:260px;">
+        <a ng-click="modal.show()" class="item item-image">
           <img class="full-image" ng-src="{{post.images[0]}}">
         </a>
       </div>
@@ -15,8 +15,8 @@
     <div class="item item-body" style="height:110px;box-shadow:0 1px 5px grey;">
     <p style="text-align:center; font-size:1.3em;">{{post.title}}</p>
     <div class="item-icon-left item-icon-right">
-        <i style="font-size: small; padding-bottom:80px; color:#8D8D8D;" class="icon ion-ios-star">{{post.saved}}</i>
-        <i style="font-size: small; padding-bottom:80px; color:#8D8D8D;" class="icon ion-ios-time"></i>
+        <i style="font-size: large; padding-bottom:80px; color:#8D8D8D;" class="icon ion-ios-star">{{post.saved}}</i>
+        <i style="font-size: large; padding-bottom:80px; color:#8D8D8D;" class="icon ion-ios-camera"></i>
     </div>
       <div class="row">
         <p class="col col-offset-10" style="position:relative;top:-25px;color:#0A3CB6">CONTACT</p>
