Able to click on the pager-slider for navigating

--- a/www/templates/browse/image-popover.html
+++ b/www/templates/browse/image-popover.html
@@ -8,7 +8,7 @@
   
   
     <!-- slide box images-->
-    <ion-slide-box show-pager="true">
+    <ion-slide-box show-pager="true" pager-click="navSlide(index)">
         <ion-slide>
           <img class="full-image" ng-src="{{post.images[0]}}" style="max-width: 100%; max-height: 100%; bottom: 0; left: 0; margin: auto; overflow: auto; position: fixed; right: 0; top: 0; padding:0 10px;"></img>
         </ion-slide>
