--- a/www/templates/pages/map.html
+++ b/www/templates/pages/map.html
@@ -7,7 +7,10 @@
 <ion-content class="has-header padding">
 
 <!-- map directive-->
-<app-map style="height:400px;margin:12px;box-shadow:0 3px 25px black;"> 
+<app-map style="height:400px;margin:12px;box-shadow:0 3px 25px black;"
+         center="basel"
+    zoom="15"
+    markers="whoiswhere"> 
 </app-map>
 </ion-content>
 
