--- a/www/templates/pages/item.html
+++ b/www/templates/pages/item.html
@@ -21,12 +21,26 @@
             </div>
         </div>
         <div ng-controller="QRCtrl" class="col" style="text-align:center;">
-                <h1><b>Found it?</b></h1>
+            <h1><b>Found it?</b></h1>
+            <p>
+                Take picture of the QR code
+              <input type="file" accept="image/*" capture="camera" id="input">
+            </p>
+            <form id="result">
+              <fieldset>
+                <legend>Result</legend>
                 <p>
-                    Take picture of the QR code
+                  <label for="url">URL</label>
+                  <textarea id="url" rows="2" wrap="hard" readonly></textarea>
                 </p>
-          <button style="width:200px;" class="button button-large button-positive icon ion-ios-camera"
-                  ng-click="show()" i></button>
+              </fieldset>
+            </form>
+
+            <div class="image-container">
+                  <img src="" id="image">
+            </div>
+          <!--button style="width:200px;" class="button button-large button-positive icon ion-ios-camera"
+                  ng-click="show()" i></button-->
         </div>
     </ion-content>
 </ion-view>
