--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,3 +7,31 @@
   margin: 30px auto 0;
   box-shadow: 0px 0px 4px rgba(0,0,0,0.7);
 }
+
+/*
+    body {
+      font: 14px/1.2 "Lucida Grande", Helvetica, Arial, sans-serif;
+      padding: 20px;
+    }
+    input[type=text],
+    textarea {
+      width: 100%;
+      resize: none;
+      box-sizing: border-box;
+      font-size: 14px;
+      font-family: Courier;
+    }
+    label {
+      display: block;
+      font-weight: bold;
+    }
+    img {
+      display: block;
+      max-width: 100%;
+      height: auto;
+      border: 1px solid red;
+    }
+    .image-container {
+      margin: 20px 0;
+    }
+*/
