Changed major color to green-like

--- a/www/templates/pages/home.html
+++ b/www/templates/pages/home.html
@@ -1,18 +1,18 @@
 <ion-view>
 
-    <ion-header-bar align-title="center" class="bar-positive">
+    <ion-header-bar align-title="center" class="bar-balanced">
         <h1 class="title">Lichen Scavenger Hunt</h1>
     </ion-header-bar>
 
     <ion-content>
-        <div style="text-align:center;" class="list card">
+        <div class="card" style="text-align:center;">
 
             <div class="item item-body center">
                 <div style="max-width:500px;max-height:500px" class="item item-image">
                     <img class="center" src="img/lichen1.png">
                 </div>
-                <h1><b>Be the first to find all the lichen colonies in Kansas City</b></h1>
-                <button class="button button-large button-positive" ui-sref="signin">
+                <p><b>Be the first to find all the lichen colonies in Kansas City</b></p>
+                <button class="button button-large button-balanced" ui-sref="signin">
                     Get Started
                 </button>
             </div>
