--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -14,7 +14,7 @@ $assertive:                       #ef473a !default;
 $royal:                           #886aea !default;
 $dark:                            #414141 !default;
 */
-$positive:                        #416f98;
+$balanced:                        #72A84E;
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
