--- a/www/templates/pages/item.html
+++ b/www/templates/pages/item.html
@@ -1,5 +1,5 @@
 <ion-view>
-    <ion-header-bar align-title="center" class="bar-positive">
+    <ion-header-bar align-title="center" class="bar-balanced">
           <button class="button button-clear icon-left ion-chevron-left"
                   ui-sref="subloc({lid: 2})" i>Back</button>
         <h1 class="title">Item Name</h1>
