--- a/www/templates/pages/mainlocations.html
+++ b/www/templates/pages/mainlocations.html
@@ -1,5 +1,5 @@
 <ion-view>
-    <ion-header-bar align-title="center" class="bar-positive">
+    <ion-header-bar align-title="center" class="bar-balanced">
         <h1 class="title">Locations</h1>
           <button class="button button-clear icon ion-android-map"
                   ui-sref="map" i></button>
