--- a/www/templates/pages/signin.html
+++ b/www/templates/pages/signin.html
@@ -1,6 +1,6 @@
 <ion-view>
 
-    <ion-header-bar align-title="center" class="bar-positive">
+    <ion-header-bar align-title="center" class="bar-balanced">
         <button class="button button-clear icon ion-ios-home" ui-sref="home"></button>
         <h1 class="title">Sign Up</h1>
     </ion-header-bar>
@@ -17,7 +17,7 @@
             <textarea placeholder="Email"></textarea>
           </label>
             <br>
-            <button class="button button-large button-calm" ui-sref="mainlocs">
+            <button class="button button-large button-balanced" ui-sref="mainlocs">
                 Submit
             </button>
         </div>
