--- a/www/templates/pages/sublocation.html
+++ b/www/templates/pages/sublocation.html
@@ -1,5 +1,5 @@
 <ion-view>
-    <ion-header-bar align-title="center" class="bar-positive">
+    <ion-header-bar align-title="center" class="bar-balanced">
           <button class="button button-clear icon-left ion-chevron-left"
                   ui-sref="mainlocs" i>Back</button>
         <h1 class="title">SubLocation Name</h1>
@@ -14,7 +14,7 @@
                         <img class="full-image" src="img/lichen1x.jpg">
                     </div>
                     <div class="item item-divider footerCard">
-                        <button class="button button-small button-positive"
+                        <button class="button button-small button-balanced"
                       ui-sref="sublocitem({lid: 2, iid:1})" i>
                             species 1 name here
                         </button>
@@ -28,7 +28,7 @@
                         <img class="full-image" src="img/lichen1x.jpg">
                     </div>
                     <div class="item item-divider footerCard">
-                        <button class="button button-small button-positive"
+                        <button class="button button-small button-balanced"
                       ui-sref="sublocitem({lid: 2, iid:2})" i>
                             species 2 name here
                         </button>
@@ -43,7 +43,7 @@
                         <img class="full-image" src="img/lichen1x.jpg">
                     </div>
                     <div class="item item-divider footerCard">
-                        <button class="button button-small button-positive"
+                        <button class="button button-small button-balanced"
                       ui-sref="sublocitem({lid: 2, iid:3})" i>
                             species 3 name here
                         </button>
@@ -56,7 +56,7 @@
                         <img class="full-image" src="img/lichen1x.jpg">
                     </div>
                     <div class="item item-divider footerCard">
-                        <button class="button button-small button-positive"
+                        <button class="button button-small button-balanced"
                       ui-sref="sublocitem({lid: 2, iid:4})" i>
                             species 4 name here
                         </button>
