--- a/www/templates/pages/home.html
+++ b/www/templates/pages/home.html
@@ -5,18 +5,21 @@
     </ion-header-bar>
 
     <ion-content>
-        <div class="card" style="text-align:center;">
+        <div class="list list-inset" style="text-align:center; margin:0;">
 
-            <div class="item item-body center">
-                <div style="max-width:500px;max-height:500px" class="item item-image">
-                    <img class="center" src="img/lichen1.png">
-                </div>
-                <p><b>Be the first to find all the lichen colonies in Kansas City</b></p>
-                <button class="button button-large button-balanced" ui-sref="signin">
-                    Get Started
-                </button>
+            <div class="item item-image" style="border:none; margin:15px; border-radius: 5px;">
+                <img src="img/lichen1.png"/>
             </div>
+            
+            <div class="item item-text-wrap" style="border:none; margin: 20px 0;">
+                <h2>Be the first to find all the lichen colonies in Kansas City</h2>
+            </div>
+
+            <button class="button button-large button-balanced" ui-sref="signin">
+                Get Started
+            </button>
 
         </div>
     </ion-content>
+    
 </ion-view>
