Fixed sublocation grid layout, need to be redesign later though

--- a/www/templates/pages/home.html
+++ b/www/templates/pages/home.html
@@ -8,7 +8,7 @@
         <div class="list list-inset" style="text-align:center; margin:0;">
 
             <div class="item item-image" style="border:none; margin:15px; border-radius: 5px;">
-                <img src="img/lichen1.png"/>
+                <img src="img/homelichen.png"/>
             </div>
             
             <div class="item item-text-wrap" style="border:none; margin: 20px 0;">
