--- a/www/templates/pages/sublocation.html
+++ b/www/templates/pages/sublocation.html
@@ -6,63 +6,68 @@
           <button class="button button-clear icon-right ion-ios-home"
                   ui-sref="home" i></button>
     </ion-header-bar>
-    <ion-content style="text-align:center;">
+    <ion-content>
         <div class="row">
             <div class="col col-50" >
-                <div class="list-card">
-                    <div class="item item-image" >
-                        <img class="full-image" src="img/lichen1x.jpg">
-                    </div>
-                    <div class="item item-divider footerCard">
-                        <button class="button button-small button-balanced"
-                      ui-sref="sublocitem({lid: 2, iid:1})" i>
-                            species 1 name here
-                        </button>
-                    </div>
+                <div class="list card" style="margin:0;">
+                    <a class="item item-image" ui-sref="sublocitem({lid: 2, iid:1})">
+                        <img src="img/lichen1.jpg" style="width:7em; height:7em;">
+                    </a>
+                    <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
+                        Teloschistes Chrysopthalmus
+                    </p>
                 </div>
             </div>
 
             <div class="col col-50" >
-                <div class="list-card">
-                    <div class="item item-image">
-                        <img class="full-image" src="img/lichen1x.jpg">
-                    </div>
-                    <div class="item item-divider footerCard">
-                        <button class="button button-small button-balanced"
-                      ui-sref="sublocitem({lid: 2, iid:2})" i>
-                            species 2 name here
-                        </button>
-                    </div>
+                <div class="list card" style="margin:0;">
+                    <a class="item item-image" ui-sref="sublocitem({lid: 2, iid:2})">
+                        <img src="img/lichen2.jpg" style="width:7em; height:7em;">
+                    </a>
+                    <p class="item item-text-wrap" style="border:none; padding: 5px 3px; text-align: center;">
+                        Teloschistes Chrysopthalmus
+                    </p>
                 </div>
             </div>
         </div>
+
         <div class="row">
             <div class="col col-50" >
-                <div class="list-card">
-                    <div class="item item-image">
-                        <img class="full-image" src="img/lichen1x.jpg">
-                    </div>
-                    <div class="item item-divider footerCard">
-                        <button class="button button-small button-balanced"
-                      ui-sref="sublocitem({lid: 2, iid:3})" i>
-                            species 3 name here
-                        </button>
-                    </div>
+                <div class="list card" style="margin:0;">
+                    <a class="item item-image" ui-sref="sublocitem({lid: 2, iid:3})">
+                        <img src="img/lichen3.jpg" style="width:7em; height:7em;">
+                    </a>
+                    <p class="item item-text-wrap" style="border:none; padding: 5px 3px; text-align: center;">
+                        Teloschistes Chrysopthalmus
+                    </p>
                 </div>
             </div>
             <div class="col col-50" >
-                <div class="list-card">
-                    <div class="item item-image">
-                        <img class="full-image" src="img/lichen1x.jpg">
-                    </div>
-                    <div class="item item-divider footerCard">
-                        <button class="button button-small button-balanced"
-                      ui-sref="sublocitem({lid: 2, iid:4})" i>
-                            species 4 name here
-                        </button>
-                    </div>
+                <div class="list card" style="margin:0;">
+                    <a class="item item-image" ui-sref="sublocitem({lid: 2, iid:4})">
+                        <img src="img/lichen4.jpg" style="width:7em; height:7em;">
+                    </a>
+                    <p class="item item-text-wrap" style="border:none; padding: 5px 3px; text-align: center;">
+                        Teloschistes Chrysopthalmus
+                    </p>
                 </div>
             </div>
+        </div>
+        <div class="item item-divider" style="border-color: #000;">
+            Discovered Lichens
+        </div>
+        <div class="row">
+            <div class="col col-50" >
+                <div class="list card" style="margin:0;">
+                    <a class="item item-image" ui-sref="sublocitem({lid: 2, iid:5})">
+                        <img src="img/lichen5.jpg" style="width:7em; height:7em;">
+                    </a>
+                    <p class="item item-text-wrap" style="border:none; padding: 5px 3px; text-align: center;">
+                        Teloschistes Chrysopthalmus
+                    </p>
+                </div>
+            </div>
+            
         </div>
     </ion-content>
 </ion-view>
