--- a/www/templates/pages/item.html
+++ b/www/templates/pages/item.html
@@ -10,7 +10,7 @@
         <div class="list card">
             <div class="item item-body center">
                 <div style="max-width:500px;max-height:500px" class="item item-image">
-                    <img class="full-image" src="img/lichen1x.jpg">
+                    <img class="full-image" src="img/lichen1.jpg">
                 </div>
                 <h1 style="text-align:left;"><b>Hint:</b></h1>
                 <p>
