Quik fix Quik fix

--- a/www/templates/pages/sublocation.html
+++ b/www/templates/pages/sublocation.html
@@ -11,7 +11,7 @@
             <div class="col col-50" >
                 <div class="list card" style="margin:0;">
                     <a class="item item-image" ui-sref="sublocitem({lid: 2, iid:1})">
-                        <img src="img/lichen1.jpg" style="width:7em; height:7em;">
+                        <img src="img/lichen1.jpg" style="height:8em;width:8em;">
                     </a>
                     <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
                         Teloschistes Chrysopthalmus
@@ -20,11 +20,11 @@
             </div>
 
             <div class="col col-50" >
-                <div class="list card" style="margin:0;">
+                <div class="list card" style="margin:0; width:100%; height:100%;">
                     <a class="item item-image" ui-sref="sublocitem({lid: 2, iid:2})">
-                        <img src="img/lichen2.jpg" style="width:7em; height:7em;">
+                        <img src="img/lichen2.jpg" style="height:8em;width:8em;">
                     </a>
-                    <p class="item item-text-wrap" style="border:none; padding: 5px 3px; text-align: center;">
+                    <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
                         Teloschistes Chrysopthalmus
                     </p>
                 </div>
@@ -33,11 +33,11 @@
 
         <div class="row">
             <div class="col col-50" >
-                <div class="list card" style="margin:0;">
+                <div class="list card" style="margin:0; width:100%; height:100%;">
                     <a class="item item-image" ui-sref="sublocitem({lid: 2, iid:3})">
-                        <img src="img/lichen3.jpg" style="width:7em; height:7em;">
+                        <img src="img/lichen3.jpg" style="height:8em;width:8em;">
                     </a>
-                    <p class="item item-text-wrap" style="border:none; padding: 5px 3px; text-align: center;">
+                    <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
                         Teloschistes Chrysopthalmus
                     </p>
                 </div>
@@ -45,22 +45,22 @@
             <div class="col col-50" >
                 <div class="list card" style="margin:0;">
                     <a class="item item-image" ui-sref="sublocitem({lid: 2, iid:4})">
-                        <img src="img/lichen4.jpg" style="width:7em; height:7em;">
+                        <img src="img/lichen4.jpg" style="height:8em; width:8em;">
                     </a>
-                    <p class="item item-text-wrap" style="border:none; padding: 5px 3px; text-align: center;">
+                    <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
                         Teloschistes Chrysopthalmus
                     </p>
                 </div>
             </div>
         </div>
-        <div class="item item-divider" style="border-color: #000;">
+        <div class="item item-divider">
             Discovered Lichens
         </div>
         <div class="row">
             <div class="col col-50" >
                 <div class="list card" style="margin:0;">
                     <a class="item item-image" ui-sref="sublocitem({lid: 2, iid:5})">
-                        <img src="img/lichen5.jpg" style="width:7em; height:7em;">
+                        <img src="img/lichen5.jpg" style="height:8em; width:8em;">
                     </a>
                     <p class="item item-text-wrap" style="border:none; padding: 5px 3px; text-align: center;">
                         Teloschistes Chrysopthalmus
