FIXED ANDROID VERSION TO FUNCTION THE SAME AS THE IOS ONE. sCROLLING IS STRANGE THOUGH

--- a/www/templates/pages/home.html
+++ b/www/templates/pages/home.html
@@ -1,4 +1,4 @@
-<ion-tabs class="tabs-icon-top tabs-dark">
+<ion-tabs class="tabs-icon-top tabs-bottom tabs-dark">
 
   <ion-tab title="Browse" icon-on="ion-ios-browsers" icon-off="ion-ios-browsers-outline" ui-sref="home.browse.featured">
       <ion-nav-view name="browse"></ion-nav-view>
