--- a/www/css/style.css
+++ b/www/css/style.css
@@ -63,3 +63,9 @@ Not working otherwise! */
   -webkit-transition: all ease-in-out 250ms;
   transition: all ease-in-out 250ms;
 }
+
+.angular-google-map,
+.angular-google-map-container {
+  width: 100%;
+  height: 100%;
+}
