post page update

--- a/www/templates/browse/image-popover.html
+++ b/www/templates/browse/image-popover.html
@@ -5,10 +5,10 @@
       <button class="button button-clear icon-left ion-ios-close-empty" ng-click="closeModal()"></button>
     </div>
   </ion-header-bar>
-  
-  
+
+
     <!-- slide box images-->
-    <ion-slide-box show-pager="true" pager-click="navSlide(index)">
+    <ion-slide-box ng-click="closeModal()" show-pager="true" pager-click="navSlide(index)">
         <ion-slide>
           <img class="full-image" ng-src="{{post.images[0]}}" style="max-width: 100%; max-height: 100%; bottom: 0; left: 0; margin: auto; overflow: auto; position: fixed; right: 0; top: 0; padding:0 10px;"></img>
         </ion-slide>
@@ -19,5 +19,5 @@
           <img class="full-image" ng-src="{{post.images[0]}}" style="max-width: 100%; max-height: 100%; bottom: 0; left: 0; margin: auto; overflow: auto; position: fixed; right: 0; top: 0; padding:0 10px;"></img>
         </ion-slide>
     </ion-slide-box>
-  
+
 </ion-modal-view>
